Added query to the roomRepository database